--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,3 +1,13 @@
+// Container
+.container {
+  max-width: $max-width;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
+  margin-top: 6rem;
+  margin-bottom: 3rem;
+}
+
 // Text Styles
 .x-large {
   font-size: 4rem;
@@ -59,6 +69,20 @@
   }
 }
 
+.text-primary {
+  color: $primary-color;
+}
+
+.round-img {
+  border-radius: 50%;
+}
+
+.line {
+  height: 1px;
+  background: #ccc;
+  margin: 1.5rem 0;
+}
+
 // Backgrounds
 .bg {
   &-primary {
@@ -67,18 +91,68 @@
   }
   &-light {
     @include set-background($light-color);
+    border: #ccc 1px solid;
   }
   &-dark {
     @include set-background($dark-color);
+    border: #ccc 1px solid;
   }
   &-success {
     @include set-background($success-color);
+    border: #ccc 1px solid;
   }
   &-danger {
     @include set-background($danger-color);
+    border: #ccc 1px solid;
   }
   &-white {
     @include set-background(#fff);
+    border: #ccc 1px solid;
+  }
+}
+
+// Alerts
+.alert {
+  padding: 0.8rem;
+  margin: 1rem;
+  opacity: 0.9;
+  background: $light-color;
+  color: #333;
+
+  &.alert-primary {
+    @include set-background($primary-color);
+  }
+  &.alert-dark {
+    @include set-background($dark-color);
+  }
+  &.alert-success {
+    @include set-background($success-color);
+  }
+  &.alert-danger {
+    @include set-background($danger-color);
+  }
+}
+
+// Badges
+.badge {
+  font-size: 0.8rem;
+  padding: 0.1rem;
+  text-align: center;
+  margin: 0.3rem;
+  background: $light-color;
+  color: #333;
+
+  &.badge-primary {
+    @include set-background($primary-color);
+  }
+  &.badge-dark {
+    @include set-background($dark-color);
+  }
+  &.badge-success {
+    @include set-background($success-color);
+  }
+  &.badge-danger {
+    @include set-background($danger-color);
   }
 }
 
@@ -89,4 +163,17 @@
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.7);
+}
+
+// Tables
+.table {
+  th,
+  td {
+    padding: 1rem;
+    text-align: left;
+  }
+
+  th {
+    background: $light-color;
+  }
 }
